# Assignment

./: CMakeLists.txt  README.md  package.xml
src/: object_tracker.cpp  visualization_node.cpp
swaayatt_rushikesh/: .gitignore  CMakeLists.txt.save
swaayatt_rushikesh/launch/: assignment.launch
swaayatt_rushikesh/msg/: DetectedObject.msg  TrackedObject.msg  TrackedObjects.msg
swaayatt_rushikesh/scripts/: yolo_detector.py
swaayatt_rushikesh/src/: image_subscriber.cpp
